--- a/Style.css
+++ b/Style.css
@@ -6,7 +6,7 @@ body{
 }
 .text{
     width: 40%;
-    margin: 200px auto;
+    margin: 120px auto;
     display: block;
 }
 .first-h3{
@@ -49,7 +49,7 @@ body{
     border:1px solid yellow
 }
 .menu{
-    margin: 100px auto;
+    margin: 50px auto;
     width: 40%;
     justify-content: space-evenly;
 }
@@ -65,6 +65,7 @@ body{
     border-radius: 15px;
     padding: 3px 40px; 
     background: #808080;
+    color: white;
 }
 .cate:hover{
     transition: 0.5s ease;
@@ -80,24 +81,37 @@ body{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .menus{
-    width: 70%;
-    background: #808080; 
+    width: 55%;
     color: #fff;
     margin: 50px auto;
+    padding-bottom: 50px;
     padding-top: 20px;
     border-radius: 20px;
-    
+    background-image: url(/Images/menu-background.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    font-family: 'Bungee Inline', sans-serif;
+    font-family: 'Hind Madurai', sans-serif;
+    font-family: 'Lilita One', sans-serif;
+    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Pinyon Script', cursive;
+    font-family: 'Playfair Display', serif;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Sigmar', sans-serif;
+    font-family: 'Sofia Sans Semi Condensed', sans-serif;
 }
 .items-of-menu{
-    width: 90%;
-    margin: 20px auto;
+    width: 80%;
+    padding-bottom: 40px;
+    margin: 30px auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    gap: 5px;
 }
-h2 {
-    font-family: 'Chivo', sans-serif;
-    font-family: 'Oswald', sans-serif;
+.menus-h2 {
+    margin:40px 0;
     text-align: center;
     text-transform: uppercase;
 }
@@ -115,7 +129,21 @@ h2 {
 }
 
 .drink-details {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.drink-details > p{
+    margin: 0;
+    padding: 0;
+}
+.drink-details > button{
+    margin: 0;
+    padding:0px 10px;
+    border-radius: 10px;
+    background: #808080;
+    font-weight: bold;
+    width: 100px;
+
 }
 
 .item-name {
@@ -124,16 +152,11 @@ h2 {
 }
 
 .item-price {
-    color: #008000; /* Green for price */
+    color: #008000; 
     font-size: 1.1em;
 }
-
-.item-description {
-    margin-top: 5px;
-}
-
 .item-size {
-    color: #808080; /* Gray for size */
+    color: #808080; 
     font-size: 0.9em;
 }
 .pizza-menu{
@@ -142,3 +165,34 @@ h2 {
 .pasta-menu{
     display: none;
 }
+.about-container {
+    max-width: 800px;
+    margin: 50px auto;
+    overflow: hidden;
+  }
+  
+  .about-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 50px;
+  }
+  
+  .about-section.reverse {
+    flex-direction: row-reverse;
+  }
+  
+  .about-content {
+    max-width: 400px;
+  }
+  
+  .about-content h1, .about-content h2 {
+    margin-bottom: 20px;
+  }
+  
+  .about-image img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px; /* Optional: Add a border radius for a rounded look */
+  }
