--- a/Style.css
+++ b/Style.css
@@ -13,10 +13,10 @@ body{
     color:yellow;
     text-align: center;
     font-family: 'Oswald', sans-serif;
-    font-size: 40px;
+    font-size: 30px;
 }
 .main-h1{
-    font-size: 70px;
+    font-size: 55px;
     text-align: center;
     color: white;
     font-family: 'Chivo', sans-serif;
@@ -46,6 +46,7 @@ body{
     border:1px solid white
 }
 .second{
+    cursor: pointer;
     border:1px solid yellow
 }
 .menu{
@@ -140,8 +141,8 @@ body{
     margin: 0;
     padding:0px 10px;
     border-radius: 10px;
-    background: #808080;
-    font-weight: bold;
+    background-color: #4caf50;
+    color: #fff;
     width: 100px;
 
 }
@@ -165,34 +166,81 @@ body{
 .pasta-menu{
     display: none;
 }
-.about-container {
+
+  #reservationBox {
+    display: none;
+    position: fixed;
+    top: 100px;
+    background: url(/Images/menu-background-2.jpg);
+    background-size: cover;
+    right: 20px;
+    width: 300px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: white;
+}
+#date{
+    margin-bottom: 10px;
+}
+
+#reservationBox h2 {
+    margin-top: 0;
+}
+
+#closeButton {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    color: white;
+}
+
+#reserveButton {
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    margin-top: 15px;
+    cursor: pointer;
+}
+.checkbox-label {
+    display: block;
+    margin-top: 10px;
+}
+.story-container {
+    margin:50px auto;
+    width: 70%;
     max-width: 800px;
-    margin: 50px auto;
+    background-color: #fff;
+    border-radius: 8px;
     overflow: hidden;
-  }
-  
-  .about-section {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 50px;
-  }
-  
-  .about-section.reverse {
-    flex-direction: row-reverse;
-  }
-  
-  .about-content {
-    max-width: 400px;
-  }
-  
-  .about-content h1, .about-content h2 {
-    margin-bottom: 20px;
-  }
-  
-  .about-image img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px; /* Optional: Add a border radius for a rounded look */
-  }
+}
+
+.story-image {
+    flex: 1;
+    overflow: hidden;
+}
+
+.story-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.story-text {
+    flex: 1;
+    padding: 20px;
+}
+
+.h2-about{
+    color: black;
+}
+
+p {
+    line-height: 1.6;
+}
