--- a/Style.css
+++ b/Style.css
@@ -472,9 +472,37 @@ p {
     border: 1px solid #93979b;
     font-size: 10px;
     display: grid;
-    grid-template-columns: repeat(4 ,1fr);
+    grid-template-columns: repeat(5 ,1fr);
     gap: 10px;
 }
 #div-of-prodcts{
     width: 350px;
 }
+.nrRendor-order, .totalAmount{
+    font-size: 15px;
+    margin: auto auto;
+}
+.quantity-ordered{
+    margin-left: 50px;
+}
+.menu-res{
+    font-size: 12px;
+    margin: 0px 70px;
+}
+.quantity{
+    margin-right: 0;
+}
+.price{
+    margin-right: 50px;
+}
+.red-button {
+    background-color: red;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
